--- a/home_task_8a_MAKET_FORM/css/media.css
+++ b/home_task_8a_MAKET_FORM/css/media.css
@@ -1,7 +1,20 @@
 @import "style.css" all;
 
-@media all and (max-width: 1110px){
-    span:nth-child(3){
-        width: 100%;
+@media all and (max-width: 740px){
+    .article label{
+        float: none;
+    }
+    .article__input{
+        margin-left: 0px;
+    }
+    span{
+        display: block;
+    }
+    select{
+        margin-left: 0;
+        /* width: 100%; */
+    }
+    .public__input{
+        display: block;
     }
 }
