--- a/home_task_8a_MAKET_FORM/css/style.css
+++ b/home_task_8a_MAKET_FORM/css/style.css
@@ -4,21 +4,51 @@
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
 }
+
 form {
     border: 3px double red;
-    padding: 20px;
+    padding: 15px;
+}
+p{
+    margin: 10px 0px;
+}
+.article{
+    margin: 5px 0px;
+}
+.article label{
+    float: left;
+    width: 250px;
+}
+.article__input{
+    margin-left: 254px;
+}
+.article__input input{
+    width: 100%;
+}
+.clearfix::after{
+    content: "";
+    clear: both;
 }
 span{
     display: inline-block;
-    width: 20%;
-    margin: 5px 0px;
 }
-input[type="text"]{
-    width: 79%;
-    margin-left: 5px;
+select{
+    margin-left: 172px;
 }
-input[type="radio"]{
-    margin-right: 5px;
+.public{
+    margin: 10px 0px;
+}
+.public label{
+    display: inline-block;
+    width: 250px;
+}
+.public__input{
+    display: inline-block;
+    margin-right: 10px;
+}
+.comments label{
+    display: inline-block;
+    width: 250px;
 }
 textarea{
     width: 100%;
