--- a/home_task_Maket_5/css/style.css
+++ b/home_task_Maket_5/css/style.css
@@ -22,6 +22,11 @@ h2 {
   width: 1110px;
   margin: 0 auto;
 }
+.clearfix::after{
+  content: "";
+  display: block;
+  clear: both;
+}
 .header .container p {
   padding-top: 38px;
   padding-bottom: 40px;
@@ -61,7 +66,6 @@ h2 {
   width: 626px;
   margin-top: 49px;
   margin-bottom: 55px;
-  /* font-size: 16px; */
   font-weight: 400;
   line-height: 30px;
 }
@@ -72,7 +76,6 @@ h2 {
 }
 .slider .container button > p {
   padding: 14px 35px;
-  /* font-size: 16px; */
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -94,7 +97,6 @@ h2 {
   color: #333333;
   font-weight: 500;
 }
-
 .vertical_line {
   height: 50px;
   width: 2px;
@@ -105,14 +107,12 @@ h2 {
   margin-top: 50px;
   color: #333;
   text-transform: uppercase;
-  /* font-size: 30px; */
   font-weight: 400;
   text-align: center;
 }
 .servise .container > p {
   margin-top: 49px;
   color: #8e8e8e;
-  /* font-size: 16px; */
   font-weight: 400;
   line-height: 30px;
   text-align: center;
@@ -133,7 +133,6 @@ h2 {
 .wrapper:hover {
   border: 1px solid #333333;
 }
-
 .wrapper:not(:first-child) {
   margin-left: 30px;
 }
@@ -146,7 +145,6 @@ h2 {
 }
 .wrapper p {
   color: #8e8e8e;
-  /* font-size: 16px; */
   font-weight: 400;
   line-height: 27px;
   text-align: center;
@@ -188,22 +186,18 @@ h2 {
   margin-top: 20px;
   margin-bottom: 19px;
 }
-
 .portfolio {
   background-color: #f8f8f8;
   text-align: center;
 }
-
 .portfolio h2 {
   color: #333333;
-  /* font-size: 30px; */
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 100px;
 }
-
 .portfolio ul {
   list-style: none;
   display: inline-block;
@@ -290,13 +284,11 @@ h2 {
 .portfolio_wrapper_item_hover_bottom p {
   color: #8e8e8e;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
   font-weight: 400;
   line-height: 27px;
 }
 .why_nipro h2 {
   color: #333333;
-  /* font-size: 30px; */
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
@@ -329,13 +321,11 @@ h2 {
   line-height: 30px;
   text-transform: uppercase;
 }
-
 .why_nipro_wrapper_item p {
   margin-top: 51px;
   margin-bottom: 38px;
   color: #8e8e8e;
   font-family: "Roboto", sans-serif;
-  /* font-size: 16px; */
   font-weight: 400;
   line-height: 27px;
 }
@@ -343,21 +333,18 @@ h2 {
   color: #333333;
   cursor: pointer;
 }
-
 .who_work {
   background: url("../img/Background.png");
   background-size: cover;
 }
 .who_work h2 {
   color: #333333;
-  /* font-size: 30px; */
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 100px;
 }
-
 .who_work_box {
   margin-bottom: 100px;
 }
@@ -386,23 +373,19 @@ h2 {
 }
 .who_work_box_item .foto_caption p {
   color: #8e8e8e;
-  /* font-size: 16px; */
   font-weight: 400;
   font-family: "Roboto", sans-serif;
   margin-left: 31px;
   margin-bottom: 17px;
 }
-
 .best_price h2 {
   color: #333333;
-  /* font-size: 30px; */
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   margin-top: 30px;
   margin-bottom: 100px;
 }
-
 .best_price_wrapper {
   margin-bottom: 100px;
 }
@@ -465,7 +448,6 @@ h2 {
   font-weight: 400;
   line-height: 40px;
 }
-
 .best_price_box .best_price_box_link {
   border: 1px solid #cccccc;
   padding: 19px 46px;
@@ -479,7 +461,6 @@ h2 {
   font-weight: 400;
   text-transform: uppercase;
 }
-
 .responsive {
   background-color: #f8f8f8;
 }
@@ -509,7 +490,6 @@ h2 {
   opacity: 1;
   cursor: pointer;
 }
-
 .footer_box {
   background: url("../img/Background_Footer.png");
   background-size: cover;
@@ -525,7 +505,6 @@ h2 {
 .footer_top p {
   color: #ffffff;
   font-family: "Roboto", sans-serif;
-  /* font-size: 16px; */
   font-weight: 400;
   line-height: 27px;
   text-align: center;
@@ -552,20 +531,16 @@ h2 {
   opacity: 0.5;
   cursor: pointer;
 }
-
 .footer_top img {
   margin-top: 13px;
 }
-
 .footer_line {
   height: 1px;
   background-color: #ccc;
 }
-
 .footer_bottom p {
   color: #ffffff;
   font-family: "Roboto", sans-serif;
-  /* font-size: 16px; */
   font-weight: 400;
   float: left;
   margin-top: 40px;
