--- a/Maket_3/css/style.css
+++ b/Maket_3/css/style.css
@@ -11,11 +11,17 @@ body {
   width: 1100px;
   margin: 0 auto;
 }
+.clearfix::before{
+  content: "";
+  display: block;
+  clear: both;
+}
 .flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+/* Section ------------============ HEADER ============------------ */
 .header__top {
   background-color: #10163633;
 }
@@ -64,27 +70,24 @@ header {
 }
 .header__slider {
   text-align: center;
+  position: relative;
 }
 .header__slider h1 {
-  /* Style for "Meet Brand" */
   color: #ffffff;
   font-family: "Open Sans";
   font-size: 62px;
   font-weight: 300;
-  margin-top: 397px;
+  padding-top: 397px;
 }
 .header__slider span:nth-child(2) {
-  /* Text style for "Meet , !" */
   font-family: "Open Sans Light";
   font-weight: 300;
 }
 .header__slider span:nth-child(1) {
-  /* Text style for "Brandi" */
   font-family: "Open Sans";
   font-weight: 700;
 }
-.header__slider p:nth-child(1) {
-  /* Style for "/creative" */
+.header__slider p:nth-child(2) {
   opacity: 0.9;
   color: #ffffff;
   font-family: "Open Sans";
@@ -92,11 +95,122 @@ header {
   font-weight: 300;
 }
 .header__slider p > span {
-  /* Text style for "/creative" */
   color: #0feb9e;
+}
+.header__slider p:nth-child(4){
+  opacity: 0.9;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-weight: 300;
+  display: inline-block;
+  margin-left: 33px;
+  margin-right: 33px;
 }
 .header__slider__line {
   width: 28px;
   height: 1px;
   background-color: #0feb9e;
+  display: inline-block;
+}
+.header__slider__dots{
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  margin-right: 48px;
+}
+.header__slider__dots .selected svg g{
+  opacity: 0.9;
+}
+.header__slider__dots .selected svg path {
+  fill: #fff;
+}
+
+/* Section ------------============ FEATURES ============------------ */
+.features{
+  background-color: #f4f7f9;
+}
+.features h2{
+  text-align: center;
+  color: #0eb493;
+  font-family: "Open Sans";
+  font-size: 28px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: -0.56px;
+  padding: 77px 0px 25px;
+}
+.features_box{
+  display: flex;
+  justify-content: space-between;
+}
+.features_box_item{
+  flex-basis: 356px;
+}
+.features_box_item img{
+  float: left;
+}
+.features_box_item h3{
+  margin: 3px 0px 22px 57px;
+  color: #062033;
+  font-family: "Open Sans";
+  font-size: 20px;
+}
+.features_box_item p{
+  margin-left: 56px;
+  opacity: 0.7;
+  color: #062033;
+  font-family: "Open Sans";
+  font-weight: 400;
+  line-height: 21px;
+}
+.features__slider__dots{
+  display: flex;
+  justify-content: center;
+  padding: 80px 0px 54px;
+}
+.features__slider__dots .dot:nth-child(2){
+  margin: 0px 15px;
+}
+.features__slider__dots .selected svg g{
+  opacity: 0.9;
+}
+.features__slider__dots .selected svg path {
+  fill: #000;
+}
+
+/* Section ------------============ WORKS ============------------ */
+.works h2{
+  text-align: center;
+  color: #0eb493;
+  font-family: "Open Sans";
+  font-size: 28px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: -0.56px;
+  padding: 77px 0px 25px;
+}
+.works p{
+  width: 929px;
+  margin-top: 75px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  opacity: 0.8;
+  color: #062033;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.works__filter ul{
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  margin: 48px 0px 37px;
+}
+.works_box{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
