add section Some fun facts

--- a/Maket_3/css/style_sass.sass
+++ b/Maket_3/css/style_sass.sass
@@ -93,4 +93,17 @@
     .features__slider__dots
         margin-top: 87px
         margin-bottom: 120px
-            
+// .some_fun_facts
+//     background: url('../img/some-fun-facts/background/Rectangle_8_copy.png'),
+//         url('../img/some-fun-facts/background/Layer_29.png'),
+//         url('../img/some-fun-facts/background/Layer_28.png'),
+//         url('../img/some-fun-facts/background/Rectangle_8.png')
+//     h2 
+//         color: #0eb493
+//         font-family: "Open Sans"
+//         font-size: 28px
+//         text-transform: uppercase
+//         letter-spacing: -0.56px
+//         text-align: center
+//         margin-top: 101px
+//         margin-bottom: 25px           
