--- a/Maket_3/css/style.css
+++ b/Maket_3/css/style.css
@@ -36,6 +36,10 @@ body {
   background-color: #062033;
   opacity: 0.1;
 }
+.white{
+  background-color: #ffffff;
+  opacity: 0.5;
+}
 /* Section ------------============ HEADER ============------------ */
 .header__top {
   background-color: #10163633;
@@ -75,10 +79,17 @@ body {
   align-items: stretch;
 }
 .header__top__nav li {
+  height: 70px;
+  padding-top: 30px;
+  border-top: 1px solid transparent;
   color: #ffffff;
   font-family: "Open Sans";
   font-weight: 400;
   letter-spacing: 0.65px;
+}
+.header__top__nav li:hover {
+  border-top: 1px solid #32b0ee;
+  cursor: pointer;
 }
 header {
   background: url("../img/Slice_1.png");
@@ -273,4 +284,59 @@ header {
   width: 400px;
   height: 300px;
 }
-/* ----------------=================== MEET OUR TEAM =================-------------------- */
+/* ----------------=================== SOME FUN FACTS =================-------------------- */
+.some_fun_facts{
+  background: url('../img/some-fun-facts/background/Rectangle_8_copy.png'),
+              url('../img/some-fun-facts/background/Layer_29.png'),
+              url('../img/some-fun-facts/background/Layer_28.png'),
+              url('../img/some-fun-facts/background/Rectangle_8.png');
+  background-size: cover;
+}
+.some_fun_facts h2{
+  color: #0eb493;
+  font-family: "Open Sans";
+  font-size: 28px;
+  text-transform: uppercase;
+  letter-spacing: -0.56px;
+  text-align: center;
+  padding-top: 100px;     
+  padding-bottom: 25px;
+}
+.some_fun_facts_box{
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.facts_item .circle{
+  height: 130px;
+  width: 130px;
+  background: url('../img/some-fun-facts/Circle.png');
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.facts_item:nth-child(2) .circle{
+  margin-left: 10px;
+}
+.facts_item:nth-child(3) .circle{
+  margin-left: 20px;
+}
+.facts_item p:first-of-type{
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-size: 60px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 51px;
+  margin-bottom: 18px;
+}
+.facts_item p:last-child{
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 158px;
+}
