add style in .sass

--- a/Maket_3/css/style.css
+++ b/Maket_3/css/style.css
@@ -285,7 +285,7 @@ header {
   height: 300px;
 }
 /* ----------------=================== SOME FUN FACTS =================-------------------- */
-.some_fun_facts{
+/* .some_fun_facts{
   background: url('../img/some-fun-facts/background/Rectangle_8_copy.png'),
               url('../img/some-fun-facts/background/Layer_29.png'),
               url('../img/some-fun-facts/background/Layer_28.png'),
@@ -339,4 +339,4 @@ header {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 158px;
-}
+} */
