--- a/Maket_3/css/style_sass.sass
+++ b/Maket_3/css/style_sass.sass
@@ -141,3 +141,221 @@
         .facts_item:nth-child(3)
             .circle
                 margin-left: 20px
+
+.lets_discuss
+    h2
+        color: #0eb493
+        font-family: "Open Sans"
+        font-size: 28px
+        text-transform: uppercase
+        letter-spacing: -0.56px
+        text-align: center
+        margin-top: 100px
+        margin-bottom: 25px
+    p 
+        opacity: 0.8
+        color: #062033
+        font-family: "Open Sans"
+        font-size: 18px
+        font-weight: 400
+        line-height: 24px
+        text-align: center
+        margin-top: 30px
+    .lets_discuss_box
+        margin-top: 81px
+        margin-bottom: 100px
+        display: flex
+        justify-content: space-between
+        .lets_discuss_about
+            flex: 0 0 245px
+            h6 
+                color: #062033
+                font-size: 24px
+                line-height: 32px
+            p 
+                color: #6a737b
+                font-family: "Open Sans"
+                font-size: 13px
+                font-weight: 400
+                text-align: left
+                margin-top: 20px
+                margin-bottom: 0px
+        .lets_discuss_form
+            margin: 0 50px
+            flex: 0 0 780px
+            position: relative
+            h5 
+                color: #062033
+                font-family: "Open Sans"
+                font-size: 24px
+                font-weight: 700
+                line-height: 24px
+            .form_group
+                display: flex
+                justify-content: space-between
+                margin-top: 50px
+                .form_input
+                    position: relative  
+                    label 
+                        position: absolute
+                        top: -21px
+                        left: 0
+                        color: #5b646e
+                        font-size: 13px
+                        font-weight: 400
+                        line-height: 24px
+                    input 
+                        width: 370px
+                        border: none
+                        border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+                .form_input:hover
+                    cursor: pointer
+                    label 
+                        color: #1b1e22
+                    input
+                        border-bottom: 1px solid rgba(0, 0, 0, 1)  
+            .form_textarea
+                margin-top: 45px
+                label 
+                    color: #5b646e
+                    font-size: 13px
+                    font-weight: 400
+                    line-height: 24px
+                textarea 
+                    width: 100%
+                    resize: none
+                    border: none
+                    border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+            button 
+                position: absolute
+                right: 0
+                margin-top: 38px
+                display: flex
+                border: none
+                background-color: #FFFFFF
+                img 
+                    padding: 5px 12px 5px 0px
+                p 
+                    margin: 0
+                    padding: 0
+                    color: #000000
+                    font-family: "Open Sans"
+                    font-size: 16px
+                    font-weight: 400
+                    line-height: 24px
+            button:hover
+                cursor: pointer
+        .lets_discuss_social
+            flex-basis: 70px
+            a 
+                img 
+                    padding: 0 22px 20px
+    .lets_discuss_map
+        height: 215px
+        background-image: url('../img/lets-discuss/Map.png')
+        position: relative
+        .pointer
+            display: inline-block
+            position: absolute
+            transform: translate(600px, 110px)
+footer 
+    border-top: 5px solid #062033
+    background-color: #21b697
+    color: #ffffff
+    font-family: "Open Sans"
+    padding-bottom: 125px
+    .footer_box
+        margin-top: 100px
+        display: flex
+        justify-content: space-between
+        .footer_logo, .footer_subscribe, .footer_explore, .footer_created
+            flex-basis: 250px
+        .footer_logo
+            p 
+                font-size: 13px
+                font-weight: 400
+                line-height: 24px
+                margin-top: 44px
+        .footer_subscribe
+            p:first-child
+                font-size: 14px
+                font-weight: 700
+                line-height: 24px
+                opacity: 0.8
+                margin-bottom: 47px
+            .footer_subscribe_input 
+                width: 271px
+                border: 2px solid #ffffff
+                border-radius: 3px
+                input
+                    height: 46px
+                    width: 87%
+                    border: none
+                    background-color: transparent
+                input:hover
+                    background-color: #ffffff
+                button 
+                    height: 46px
+                    width: 10%
+                    color: #ffffff
+                    border: none
+                    background-color: transparent   
+                button:before 
+                    font-family: 'fontello'
+                    content: '\f178'
+            p:last-child
+                font-size: 13px
+                font-weight: 400
+                line-height: 24px
+                margin-top: 24px
+        .footer_explore 
+            p 
+                font-size: 14px
+                font-weight: 700
+                line-height: 24px
+                margin-bottom: 44px
+                opacity: 0.8
+            .footer_explore_list_1
+                float: left
+                margin-right: 41px
+            .footer_explore_list_1, .footer_explore_list_2
+                list-style-type: none
+                li 
+                    a 
+                        text-decoration: none
+                        font-size: 13px
+                        font-weight: 400
+                        line-height: 32px
+                        color: #ffffff
+                li:not(:first-child) 
+                    margin-top: 8px
+        .footer_created 
+            p:first-child
+                position: relative
+                font-family: "Open Sans"
+                color: #ffffff
+                font-size: 13px
+                font-weight: 400
+                line-height: 24px
+                margin-top: 66px
+                img 
+                    margin: -3px 10px 0px
+                span 
+                    color: #062033
+            p:first-child::before
+                content: ""
+                display: inline-block
+                position: absolute
+                top: 6px
+                margin-left: -12px
+                width: 1px
+                height: 39px
+                background-color: #062033
+                opacity: 0.3
+            p:last-child
+                color: #062033
+                margin-top: 40px
+                    
+
+
+     
