--- a/Maket_3/css/style_sass.sass
+++ b/Maket_3/css/style_sass.sass
@@ -90,6 +90,8 @@
                     font-weight: 400
                     line-height: 24px
                     width: auto
+        .team__item:not(:last-child)
+            margin-right: 30px
     .features__slider__dots
         margin-top: 87px
         margin-bottom: 120px
@@ -258,6 +260,7 @@
             display: inline-block
             position: absolute
             transform: translate(600px, 110px)
+
 footer 
     border-top: 5px solid #062033
     background-color: #21b697
