--- a/home_task_9a_GALLERY/css/style.css
+++ b/home_task_9a_GALLERY/css/style.css
@@ -6,7 +6,7 @@
 .container {
   width: 700px;
   height: 600px;
-  margin: 0 auto;
+  margin: 20px auto;
   overflow-y: auto;
   padding: 20px;
   border: 1px solid #000000;
