--- a/home_task_9e_MAKET_FLEX/sass/style.sass
+++ b/home_task_9e_MAKET_FLEX/sass/style.sass
@@ -14,13 +14,109 @@ body
         background-color: $color-header
         h1 
             color: $color-header-text
-            font-size: 12px
+            font-size: 42px
+            font-weight: 700
+            padding: 20px 0
+            text-align: center
+            text-transform: uppercase
     main 
         display: flex
         nav 
             background-color: $color-nav
-            padding: 20px 10px
+            padding: 20px 20px
+            flex: 1 5 200px
+            h4 
+                font-size: 26px
+                color: $color-main-text
+                margin-bottom: 20px
+                font-weight: 700
+            ul 
+                list-style: disc
+                li 
+                    margin-top: 5px
+                    margin-left: 15px
+                    a 
+                        color: $color-nav-text
         section
             background-color: $color-section
-            background: url('../img/ball.png') no-repeat top right
+            background: url('../img/ball.png') repeat-y top right
             padding: 20px 10px
+            flex: 5 1 400px
+            h3 
+                font-size: 32px
+                color: $color-main-text
+                text-align: center
+                margin-bottom: 20px
+                font-weight: 700
+            img 
+                float: left
+                margin: 0 20px 20px 0
+    footer 
+        background-color: $color-header
+        h2 
+            color: $color-header-text
+            font-size: 42px
+            font-weight: 700
+            padding: 20px 0
+            text-align: center
+            text-transform: uppercase
+
+@media all and ( max-width: 1100px )
+    body 
+        main 
+            section 
+                img 
+                    width: 350px
+                    height: 200px
+    
+@media all and ( max-width: 870px )
+    body 
+        header 
+            h1 
+                font-size: 24px
+        main 
+            nav 
+                h4 
+                    font-size: 20px
+            section 
+                h3 
+                    font-size: 22px
+                img 
+                    width: 265px
+                    height: 165px
+        footer 
+            h2 
+                font-size: 24px
+
+@media all and ( max-width: 690px )
+    body 
+        header 
+            h1 
+                font-size: 20px
+        main 
+            flex-direction: column-reverse
+            nav 
+                h4 
+                    font-size: 16px
+            section 
+                h3 
+                    font-size: 18px
+        footer 
+            h2 
+                font-size: 20px
+
+@media all and ( max-width: 320px ) 
+    body 
+        header 
+            display: none
+        main 
+            nav 
+                background-color: #f1ebaed9
+                padding: 10px 10px
+                ul 
+                    list-style: none 
+                    li 
+                        float: left
+                        margin-right: 10px
+        footer 
+            display: none
