--- a/Maket_3/css/style.css
+++ b/Maket_3/css/style.css
@@ -36,7 +36,7 @@ body {
   background-color: #062033;
   opacity: 0.1;
 }
-.white{
+.white {
   background-color: #ffffff;
   opacity: 0.5;
 }
@@ -224,6 +224,12 @@ header {
 }
 .features__slider__dots .selected svg path {
   fill: #000;
+}
+.carousel-indicators li {
+  height: 8px;
+  width: 8px;
+  background-color: rgb(89, 87, 95);
+  border-radius: 4px solid black;
 }
 
 /* Section ------------============ WORKS ============------------ */
